# psol_staking

client/: prepare.ts  slash.ts  stake.ts  unstake.ts
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
